# SYSU-Homework

./: .gitignore  CMakeLists.txt  README.md  bookstore.sql
DCS216/: .gitignore  Makefile  README.md  biosfn.c  biosfn.h  boot.asm  crt0.asm  display.h  display.inc  display_bottom_left.asm  display_bottom_left.c  display_bottom_right.asm  display_bottom_right.c  display_top_left.asm  display_top_left.c  display_top_right.asm  display_top_right.c  executables.txt  kernel.c  linker.ld  note.md  vga.c  xfox.c
DCS216/dos/: .gitignore  crt0.asm  link.ld  main.c  run.sh
DCS224/1-Echo/1、TCP-Echo/: server.cpp
DCS224/1-Echo/2、TCP-Echo增强/: Makefile  client.cpp  server.cpp  socket.hpp
DCS224/1-Echo/3、UDP-Echo/: client.cpp  server.cpp  socket.hpp
DCS224/2-Chat/: Makefile  client.cpp  server.cpp  socket.hpp
DCS224/3-App/: Makefile  client.cpp  socket.hpp
DCS224/4-Compress/: .gitignore  FilePack.cpp  FileStruct.hpp  FileUnpack.cpp  Makefile  Person.hpp  StructRead.cpp  StructSave.cpp
DCS224/5-Transfer/Chat/: Makefile  client.cpp  common.cpp  common.hpp  server.cpp  socket.cpp  socket.hpp  transfer.hpp
DCS224/5-Transfer/FTP/: .gitignore  Makefile  ftpget.cpp  socket.cpp  socket.hpp  socket_stream.cpp  socket_stream.hpp
DCS242/hw3/: .env  .gitignore  Cargo.toml  README.md  race.c  race.rs  report.tex  test.c
DCS242/hw3/src/: context.rs  main.rs
DCS242/hw4/: Cargo.toml
DCS242/hw4/src/: main.rs
DCS242/hw5/: .gitignore  build.ninja  convert.cpp  mpi.cpp  prod.cpp  pubsub.cpp
DCS283/Final/: CMakeLists.txt
DCS283/Final/db/: book.txt  bookstore.sql  provider.txt
DCS283/Final/include/: refund.h  sell.h
DCS283/Final/src/: mysqlclient.cpp  refund.cpp  table_printer.cpp
DCS283/Lab6/: CMakeLists.txt  main.cpp
DCS290/lab1/: .gitignore  CMakeLists.txt  error.cpp  error.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.hpp  token.hpp
DCS290/lab2/: ast.cpp  ast.hpp  main.cpp  parser.cpp  span.cpp  span.hpp  token.cpp  visitor.hpp
DCS290/lab3/: CMakeLists.txt  README.md  ast.cpp  ast.hpp  error.cpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  sample.tiny  span.cpp  token.cpp  token.hpp
DCS290/lab4/: .gitignore  CMakeLists.txt  README.md  ast.hpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  sample.tiny  semantic.cpp  semantic.hpp
DCS295/lab1/: CMakeLists.txt  README.md
DCS295/lab1/src/: main.cpp  matrix.cpp  matrix.hpp  matrix_extended.hpp  matrix_truncated.cpp  prod_standard.cpp  prod_strassen.cpp  product.hpp
DCS295/lab2/: CMakeLists.txt  README.md
DCS295/lab2/src/: main.cpp  matrix.cpp  matrix.hpp  matrix_extended.cpp  matrix_transposed.cpp  matrix_transposed.hpp  matrix_truncated.hpp  prod_mpi.cpp  product.hpp
DCS295/lab3/: CMakeLists.txt  README.md
DCS295/lab3/src/area/: main.cpp
DCS295/lab3/src/equation/: main.cpp  semaphore.cpp  semaphore.hpp
DCS295/lab3/src/matrix/: main.cpp  matrix_extended.cpp  matrix_extended.hpp  matrix_transposed.cpp  matrix_truncated.cpp  matrix_truncated.hpp  prod_mpi.cpp  prod_standard.cpp  prod_strassen.cpp
DCS295/lab3/src/sum/: main.cpp
DCS295/lab4/: .gitignore  CMakeLists.txt  README.md  openmp.txt
DCS295/lab4/include/: parallel_for.hpp
DCS295/lab4/lib/: parallel_for.cpp
DCS295/lab4/src/: main.cpp  matrix.cpp  matrix.hpp  prod_omp.cpp  prod_pfor.cpp  prod_standard.cpp  product.hpp
DCS295/lab5/: CMakeLists.txt  main.cpp  mpi.cpp  omp.cpp  parallel_for_closure.cpp  parallel_for_closure.hpp  pfor.cpp
DCS295/lab6/: CMakeLists.txt  errors.hpp  main_cuda.cpp  matrix.cpp  matrix.hpp  matrix_transposed.hpp  prod_cuda.cu
DCS295/lab7/: CMakeLists.txt  errors.hpp  kernel.cu  main_cublas.cpp  main_cuomp.cpp  matrix.cpp  matrix.h  matrix.hpp  prod_cuda.cu  prod_cuda.cuh  prod_kernel.cu  prod_kernel.cuh  task1.cu  task2.cu  task3.cu
DCS304/asgn0/: CMakeLists.txt
DCS304/asgn0/assets/: fragment.frag  vertex.vert
DCS304/asgn0/include/glad/: glad.h
DCS304/asgn0/src/: ebo.cpp  ebo.hpp  linmath.hpp  main.cpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp  vertex.cpp  vertex.hpp
DCS304/asgn1/: main.cpp
DCS304/asgn2/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
DCS304/asgn3/: main.cpp  rasterizer.cpp
DCS304/asgn4/: CMakeLists.txt  main.cpp
DCS304/asgn5/: CMakeLists.txt  PathTracer.cpp  camera.cpp  camera.hpp  dielectric.cpp  dielectric.hpp  hitable.hpp  hitable_list.cpp  hitable_list.hpp  lambertian.cpp  lambertian.hpp  main.cpp  material.hpp  metal.cpp  metal.hpp  ray.cpp  ray.hpp  sphere.cpp  sphere.hpp  tqdm.hpp  vec3.cpp  vec3.h
DCS304/asgn6/: main.cpp
DCS304/asgn7/: .gitignore
DCS304/asgn7/src/: application.cpp  rope.cpp
DCS311/lab1/: .gitignore  Cargo.toml
DCS311/lab1/src/: case.rs  emotion.rs  knn.rs  knn_cat.rs  lib.rs  tf_idf.rs  word.rs
DCS311/lab2/: Cargo.toml  README.md  learn.py
DCS311/lab2/lab2_dataset/: DecisionTree验收数据.csv  car_train_te.csv  car_train_tr.csv  car_train_va.csv  submit_te.csv  submit_tr.csv
DCS311/lab2/src/: case.rs  conf.rs  main.rs  run.rs  sample.rs  test_utils.rs
DCS311/lab3/: Cargo.toml
DCS311/lab3/data/: train.csv  train_te.csv  train_tr.csv  train_va.csv  vali.csv
DCS311/lab3/src/: case.rs  conf.rs  (+5 more)
DCS311/lab4/: Cargo.toml  split.js
DCS311/lab8/: Cargo.toml
DCS311/lab8/src/: astar.rs  main.rs  map.rs  search.rs  ucs.rs
DCS311/lab9/: Cargo.toml  README.md
DCS325/final/: .gitignore  Cargo.toml  Procfile  README.md  build.rs  distkv.capnp
DCS325/final/proto/: DirectoryServer.proto  FileServer.proto
DCS325/final/src/: directory.rs  file.rs  lib.rs
DCS325/hw3/: Cargo.toml  build.rs  pubsub.capnp
DCS325/hw3/src/: client.rs  main.rs  options.rs  server.rs
cmake/: FindMySQL.cmake
db/: bookstore.sql  bookstore_with_data.sql
include/: mysqlclient.h  refund.h  stock.h  ui.hpp  view.h
include/controller/: book.h  offer.h
include/libmysql/: mysql_com.h
lib/: CMakeLists.txt
src/: VariadicTable.h  main.cpp  mysqlclient.cpp  mysqlclient.h  refund.cpp  sell.cpp  sell.h  stock.cpp  stock.h  ui.cpp  view.cpp
src/controller/: book.cpp  offer.cpp  provider.cpp
(+28 files in other folders)
