[package]
name = "lab1"
version = "0.1.0"
authors = ["Yuze Fu <i@xfox.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tf-idf"
path = "src/bin/tf_idf.rs"

[[bin]]
name = "knn-cat"
path = "src/bin/knn_cat.rs"

[[bin]]
name = "knn-regres"
path = "src/bin/knn_regres.rs"

[dependencies]
