[package]
name = "lab8"
version = "0.1.0"
authors = ["Yuze Fu <i@xfox.me>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
embedded-graphics = "0.6.2"
embedded-graphics-simulator = "0.2.1"
nalgebra = "0.23.1"
priority-queue = "1.0.3"
thiserror = "1.0.22"
