[package]
name = "distfs"
version = "0.1.0"
authors = ["Yuze Fu <i@xfox.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
log = "0.4"
pretty_env_logger = "0.4.0"
prost = "0.7"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1", features = ["macros", "sync", "time", "fs", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = { version = "0.6", features = ["io"] }
tonic = "0.4"

[build-dependencies]
tonic-build = "0.4"
